# ProjectEuler

./: .gitignore  README.md
001/: multiples.ml
001-multiples/: multiples.ml
002-even-fibonacci-numbers/: fibonacci.ml
003-largest-prime-factor/: largestPN.ml
003-resolved/: largestPN.ml
004-largest-palindrome-product/: palindrome.ml
005-smallest-multiple/: smallest.ml
006-resolved/: sum_square.ml
006-sum-square-difference/: sum_square.ml
007-prime/: prime.ml
008/: greatest.ml
008-largest-product-in-series/: Main.hs  x008.cabal
009-special-pythagorean-triplet/: pythagorean.ml
010/: summation.ml
010-summation-of-primes/: summation.ml
011/: grid.ml
012/: Main.hs  x012.cabal
013-large-sum/: Main.hs  x013.cabal
013-resolved/: large_sum.ml
014-longest-collatz-sequence/: collatz.ml
015-lattice-paths/: path.ml
016-power-digit-sum/: Main.hs  x016.cabal
016-resolved/: script.py
017-number-letter-counts/: Main.hs  x017.cabal
020-factorial-digit-sum/: Main.hs  x020.cabal
022-names-scores/: Main.hs  x022.cabal
024/: Main.hs  x024.cabal
024-lexicographic-permutations/: Main.hs  x024.cabal
025/: x025.cabal
025-fibonacci-number/: x025.cabal
025-resolved/: Main.hs
029-distinct-powers/: Main.hs  x029.cabal
030-digit-fifth-powers/: Main.hs  x030.cabal
036-double-base-palindromes/: Main.hs  x036.cabal
040-champernowne-constant/: Main.hs  x040.cabal
056-powerful-digit-sum/: Main.hs  x056.cabal
Problem001/: multiples.ml  multiples.py
Problem002/: fibonacci.ml  fibonacci.py
Problem004/: palindrome.ml
(+26 files in other folders)
